--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -100,9 +100,12 @@
 
     <!-- Permission related, appears in system permission UI -->
     <string name="permission_group_label" translatable="false">Shizuku</string>
-    <string name="permission_group_description">access Shizuku</string>
-    <string name="permission_label">access system APIs with higher privileges</string>
-    <string name="permission_description">Allow the app to use system APIs with higher privileges.</string>
+    <string name="permission_group_description" translatable="false">@string/permission_label</string>
+    <string name="permission_label">access Shizuku</string>
+    <string name="permission_description">Allow the app to use Shizuku.</string>
+    <string name="permission_warning_template"><![CDATA[Allow <b>%1$s</b> to %2$s?]]></string>
+    <string name="grant_dialog_button_allow_always">Allow all the time</string>
+    <string name="grant_dialog_button_deny">"Deny"</string>
 
     <!-- Starter -->
     <string name="starter">Starter</string>
