Import user translations (2021/01/18)

--- a/manager/src/main/res/values-es-rCL/strings.xml
+++ b/manager/src/main/res/values-es-rCL/strings.xml
@@ -10,4 +10,16 @@
     <string name="home_status_service_version">Versión %2$d, %1$s</string>
     <string name="home_status_service_not_running">%1$s no está activo</string>
     <string name="home_status_service_is_running">%1$s está activo</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Abrir Shizuku</string>
+    <string name="action_about">Acerca de</string>
+    <string name="settings_translation_summary_percentage">" (%s están traducidos)"</string>
+    <string name="magisk_module">el módulo Magisk</string>
+    <string name="development_settings">Opciones de desarrollador</string>
+    <string name="adb_pairing_requires_multi_window_reason">El sistema requiere que el cuadro de diálogo de emparejamiento esté siempre visible, el uso del modo de pantalla dividida es la única forma de permitir que esta aplicación y el cuadro de diálogo del sistema estén visibles al mismo tiempo.</string>
+    <string name="adb_pairing_requires_multi_window">Ingrese primero al modo de pantalla dividida (ventanas múltiples).</string>
+    <string name="dialog_adb_invalid_port">El puerto es un número entero comprendido entre 1 y 65535.</string>
+    <string name="dialog_adb_port">Puerto</string>
+    <string name="dialog_adb_discovery">Buscando servicio de depuración inalámbrica</string>
+    <string name="home_adb_title">Empiece por conectarse a su computador</string>
+    <string name="translation_contributors">—Peter Cuevas</string>
 </resources>
