--- a/manager/src/main/res/values-ja/strings.xml
+++ b/manager/src/main/res/values-ja/strings.xml
@@ -8,7 +8,7 @@
     <string name="home_status_service_is_running">%1$s 実行中</string>
     <string name="home_adb_dialog_view_command_copy_button">コピー</string>
     <string name="home_adb_title">コンピュータに接続して開始する</string>
-    <string name="grant_dialog_button_allow_always">常に許可</string>
     <string name="grant_dialog_button_deny">許可しない</string>
-    <string name="permission_warning_template"><![CDATA[&lt;b&gt;%1$s&lt;/b&gt; に「%2$s」を許可しますか？]]></string>
+    <string name="grant_dialog_button_allow_always">常に許可</string>
+    <string name="permission_warning_template">&lt;b&gt;%1$s&lt;/b&gt; に「%2$s」を許可しますか？</string>
 </resources>
