--- a/manager/src/main/res/values-cs/strings.xml
+++ b/manager/src/main/res/values-cs/strings.xml
@@ -11,7 +11,9 @@
     <string name="dialog_cannot_open_browser_title">Prohlížeč nelze spustit</string>
     <string name="start_with_root_failed">Službu nelze spustit, protože není uděleno oprávnění uživatele root nebo toto zařízení není rootováno.</string>
     <string name="starter">Spouštěč</string>
+    <string name="permission_description">Povolte aplikaci používat systémová rozhraní API s vyššími oprávněními.</string>
     <string name="permission_label">přístup k Shizuku</string>
+    <string name="permission_group_description">přístup k Shizuku</string>
     <string name="notification_working">Pracuji…</string>
     <string name="notification_service_start_no_root">Nepodařilo se požádat o oprávnění root.</string>
     <string name="notification_service_start_failed">Spuštění služby Shizuku se nezdařilo.</string>
@@ -89,7 +91,7 @@
     <string name="home_adb_button_view_command">Zobrazit příkaz</string>
     <string name="home_adb_button_view_help">Přečíst nápovědu</string>
     <string name="home_adb_description">U zařízení bez root musíte ke spuštění Shizuku použít adb (vyžaduje připojení k počítači). Tento proces je třeba opakovat při každém restartu zařízení. Přečtěte si prosím &lt;b&gt; &lt;a href=\"%1$s\"&gt; nápovědu &lt;/a&gt; &lt;/b&gt;.</string>
-    <string name="grant_dialog_button_allow_always">Povolit vždy</string>
     <string name="grant_dialog_button_deny">Zakázat</string>
-    <string name="permission_warning_template"><![CDATA[Povolit aplikaci </b>%1$s</b> %2$s?]]></string>
+    <string name="grant_dialog_button_allow_always">Povolit vždy</string>
+    <string name="permission_warning_template">Povolit aplikaci &lt;/b&gt;%1$s&lt;/b&gt; %2$s\?</string>
 </resources>
