--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -82,8 +82,7 @@
 \n配對過程開始後，您將能夠輸入配對碼。</string>
     <string name="adb_pairing_requires_multi_window_reason">系統要求配對對話方塊始終可見，使用「分割畫面」模式是使此應用程式和系統對話方塊同時可見的唯一方法。</string>
     <string name="development_settings">開發人員選項</string>
-    <string name="magisk_module">Magisk 模組</string>
-    <string name="home_root_description_magisk">如果您還是無法讓您的系統允許 Shizuku 開機啟動，您可以嘗試使用 %s。</string>
+    <string name="home_root_description_sui"><![CDATA[如果您正在使用 Magisk，可以嘗試 %1$s（一個 Riru 模組）。對於 root 使用者，它將最終取代 Shizuku。注意，已有的應用程式需要一點點修改來使用 %2$s。]]></string>
     <string name="settings_start_on_boot_summary">對於已 root 裝置，Shizuku 可以開機啟動</string>
     <string name="settings_start_on_boot">開機啟動（root）</string>
     <string name="grant_dialog_button_allow_always">一律允許</string>
